<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp12"
    android:padding="@dimen/dp12">


    <LinearLayout
        android:id="@+id/lastLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Last Updated"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="end"
            android:hint="n/a" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/startsLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/lastLyt">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Stars"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="end"
            android:hint="n/a" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/forksLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/startsLyt">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Forks"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:gravity="end"
            android:hint="n/a" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>