<resources>
    <string name="app_name">GithubApp</string>
    <string name="search">Search</string>
    <string name="invalid_user">Please enter a valid Github user Id</string>
</resources>
